--- a/style.scss
+++ b/style.scss
@@ -79,7 +79,7 @@ a {
     font-size: 24px;
     line-height: 32px;
     vertical-align: middle;
-   
+    margin-top: 24px;
 }
 .lets {
     width: 247px;
@@ -300,7 +300,6 @@ button:hover {
 }
 .min__name {
     width: 504px;
-    height: 118px;
     font-family: "Montserrat";
     font-weight: 700;
     font-size: 48px;
@@ -309,7 +308,6 @@ button:hover {
 }
 .min__name_one {
     width: 504px;
-    height: 118px;
     font-family: "Montserrat";
     font-weight: 700;
     font-size: 48px;
@@ -340,7 +338,7 @@ button:hover {
     width: 600px;
     height: 500px;
     border-radius: 30px;
-
+    object-fit: cover;
 }
 .min__games {
     display: flex;
@@ -392,7 +390,6 @@ button:hover {
 }
 .min__names {
     width: 504px;
-    height: 59px;
     font-family: "Montserrat";
     font-weight: 700;
     font-size: 48px;
