сделала звезду на мобильной версии

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -89,7 +89,7 @@
         top: 0px;
         right: 0px;
         position: absolute;
-        
+        display: block;
     }
     .small {
         width: 21px;
